# omop-mapper

./: .env.example  .gitignore  LICENSE  README.md  app.py  concept_results.json  concept_small_results.json  mapping_common.py  omop_mapping_algorithm.aux  omop_mapping_algorithm.tex  prepare_concept_small.py  pyproject.toml  render.yaml  requirements-dev.txt  requirements-indexing.txt  requirements.txt  run_indexing.py  run_mapping.py  run_unified_indexing.py  test_3stage_mapping.py  test_entity_mapping.py  test_entity_mapping_2026_condition.py  test_entity_mapping_ablation.py  test_entity_mapping_fail_retry.py  test_entity_mapping_real_data.py  test_entity_mapping_snomed.py  test_entity_mapping_snuh.py  test_entity_mapping_with_logging.py  test_sample.json  test_small_results.json
eval/: build_baseline_comparison.py  build_consensus_files.py  build_eval_run_matrix.py  build_measurement_human_run_matrix.py  build_performance_table.py  build_run20_logs.py  build_snuh_drug_run_matrix.py  compute_quantitative_metrics.py  consensus_run20_wide.py  eval_config.yaml  export_consensus_run20_from_workbook.py  llm_evaluate_concepts.py  mappability_baseline_eval.py  measure_llm_api_metrics.py  split_comparison_baseline.py  split_snuh_drug_baseline_xlsx.py  split_snuh_measurement_baseline_xlsx.py  translate_mappability_reasoning.py
indexing/: README.md  __init__.py  concept_data_processor.py  concept_indexer_with_sapbert.py  concept_relationship_data_processor.py  concept_relationship_indexer.py  concept_synonym_data_processor.py  concept_synonym_indexer_with_sapbert.py  eland_model_manager.py  elasticsearch_indexer.py  main_indexer.py  main_indexer_eland.py  sapbert_embedder.py  test_eland_sapbert.py  unified_indexer.py
indexing/data_sources/: __init__.py  athena_api.py  base.py  local_csv.py  postgres.py
omophub/: __init__.py  __main__.py  client.py  csv_batch.py  export_results_excel.py  merge_usagi_comparison.py  top_hits.py
omophub/outputs/: evaluation_USAGI_test_1_SNUH_condition_용어.xlsx.csv  evaluation_USAGI_test_2_SNUH_drug_meas_proc_용어.xlsx.csv  (+3 more)
scripts/: app.py  export_omophub_excel.sh  index.sh  log_to_xlsx.py  mapping_common.py  merge_omophub_usagi.sh  prepare_concept_small.py  retry_omophub_output.sh  run_indexing.py  run_mapping.py  run_mapping.sh  run_omophub_datasets.sh
test/: README_SapBERT.md  data.ipynb  elasticsearch_index_inspector.py  generate_evaluation_excel.py  join_synonym.ipynb  run_concept_indexing.py  run_index_inspection.py  run_sapbert_test.py  sapbert_demo.ipynb  sapbert_embedding_test.py  simple_sapbert_demo.py  test.ipynb  test.py  test_2026_condition.py  test_2_entity.py  test_ablation.py  test_fail_retry.py  test_llm_client_config.py  test_snomed.py  test_snuh.py  test_with_logging.py
test_logs_real_data/: real_data_results_20251125_123310.csv  real_data_results_detailed_20251125_123310.xlsx
(+18 files in other folders)
