[tool.poetry]
name = "MapOMOP"
version = "1.0.0"
description = "OMOP CDM Entity Mapping API"
authors = ["rose <hyobinkim@gmail.com>"]
license = "MIT"
homepage = "https://github.com/yourusername/entity-mapping-api"
repository = "https://github.com/yourusername/entity-mapping-api"
documentation = "https://github.com/yourusername/entity-mapping-api"
keywords = ["omop", "cdm", "entity-mapping", "medical", "healthcare"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

packages = [
    {include = "MapOMOP", from = "src"}
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
elasticsearch = "^9.0.0"
pandas = "^2.0.0"
numpy = "^1.26.0"
python-dotenv = "^0.19.0"
openpyxl = "^3.0.0"
torch = "^2.0.0"
transformers = "^4.21.0"
scikit-learn = "^1.3.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
plotly = "^5.15.0"
umap-learn = "^0.5.0"
tqdm = "^4.65.0"
eland = {extras = ["pytorch"], version = "^9.0.1"}

[tool.poetry.group.dev.dependencies]
pytest = "^6.0.0"
pytest-cov = "^2.0.0"
black = "^21.0.0"
flake8 = "^3.8.0"
mypy = "^0.910.0"
isort = "^5.0.0"
pre-commit = "^2.0.0"
ipykernel = "^6.30.1"

[tool.poetry.scripts]
mapomop = "MapOMOP.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["MapOMOP"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src/MapOMOP",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]